# withings-exporter

./: .env.template  .envrc  .gitignore  AGENTS.md  README.md  config.yaml.template  debug_api.py  debug_measurements.py  debug_raw_api.py  debug_user.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
tests/: test_cli_export.py  test_fetcher.py  test_oauth_and_api_client.py  test_storage_and_export.py
withings_exporter/: __init__.py  api_client.py  auth.py  cli.py  config.py  export.py  fetcher.py  oauth_client.py  scheduler.py  storage.py
